return timestamp of sent message
see #137
